- Add support for PopOs and disable VLC support by default in CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ OPTION(BUILD_MEGAGLEST "Build MegaGlest" ON)
 OPTION(BUILD_MEGAGLEST_TESTS "Build MegaGlest Unit Tests" OFF)
 OPTION(WANT_SINGLE_INSTALL_DIRECTORY "Use single install directory for everything. It is useful for example for MacOS cpack bundles." OFF)
 OPTION(WANT_STATIC_LIBS "Builds as many static libs as possible." OFF)
-OPTION(WANT_USE_VLC "Use libVLC to play videos." ON)
+OPTION(WANT_USE_VLC "Use libVLC to play videos." OFF)
 OPTION(WANT_USE_OpenSSL "Use libOpenSSL during CURL linking." ON)
 OPTION(WANT_USE_FriBiDi "Enable libFriBIDi support." ON)
 OPTION(WANT_USE_GoogleBreakpad "Enable GoogleBreakpad support." ON)
