--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -120,16 +120,20 @@ IF(BUILD_MEGAGLEST)
 	ENDIF()
 	IF(LIBVLC_FOUND AND NOT LIBVLC_VERSION STRLESS "${LIBVLC_MIN_VERSION}")
 		MESSAGE(STATUS "**NOTE: LIBVLC found so intro videos are supported.")
-		INCLUDE_DIRECTORIES(${LIBVLC_INCLUDE_DIR})
-		IF(UNIX)
-			SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${LIBVLCCORE_LIBRARY} ${LIBVLC_LIBRARY})
-			ADD_DEFINITIONS(-DHAS_LIBVLC)
-		ENDIF()
-		IF(LIBVLC_VERSION_PRE_V2)
-			ADD_DEFINITIONS(-DLIBVLC_VERSION_PRE_2)
-		ENDIF()
-		IF(LIBVLC_VERSION_PRE_1_1_13)
-			ADD_DEFINITIONS(-DLIBVLC_VERSION_PRE_1_1_13)
+		IF(WANT_USE_VLC)
+		    INCLUDE_DIRECTORIES(${LIBVLC_INCLUDE_DIR})
+		    IF(UNIX)
+			    SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${LIBVLCCORE_LIBRARY} ${LIBVLC_LIBRARY})
+			    ADD_DEFINITIONS(-DHAS_LIBVLC)
+		    ENDIF()
+		    IF(LIBVLC_VERSION_PRE_V2)
+			    ADD_DEFINITIONS(-DLIBVLC_VERSION_PRE_2)
+		    ENDIF()
+		    IF(LIBVLC_VERSION_PRE_1_1_13)
+			    ADD_DEFINITIONS(-DLIBVLC_VERSION_PRE_1_1_13)
+		    ENDIF()
+		ELSE()
+    		MESSAGE(STATUS "LIBVLC disabled so videos are NOT supported (GAME).")
 		ENDIF()
 	ELSE()
 		IF(WANT_USE_VLC)
