--- a/.travis.yml
+++ b/.travis.yml
@@ -85,7 +85,7 @@ script:
 notifications:
   irc:
     channels:
-      - "irc.freenode.org#megaglest"
+      - "irc.libera.chat#megaglest"
     skip_join: true
     use_notice: true
     on_success: change
