Cmake: Add build configuration for VS builds * Build vs 2019 project using cmake. * Cmake configured to work in windows. Hopefully still works in linux too! * Update vcpkg install script. * Configures build for MG game release or debug mode. * Still need to fix building mapeditor and g3d viewer. * Remove CurlGetConfig.cmake (not needed!)

--- a/source/g3d_viewer/CMakeLists.txt
+++ b/source/g3d_viewer/CMakeLists.txt
@@ -62,7 +62,9 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER)
 		MESSAGE(STATUS " wxWidgets: ${wxWidgets_INCLUDE_DIRS} ;/;  ${wxWidgets_LIBRARIES}")
 	ENDIF()
 
-    find_package(PkgConfig REQUIRED)
+    IF(PKG_CONFIG_FOUND)
+		find_package(PkgConfig REQUIRED)
+	ENDIF()
     IF(FORCE_STREFLOP_SOFTWRAPPER)
         pkg_search_module(STREFLOP streflop-soft)
     ELSE()
