--- a/source/glest_map_editor/CMakeLists.txt
+++ b/source/glest_map_editor/CMakeLists.txt
@@ -79,7 +79,9 @@ IF(BUILD_MEGAGLEST_MAP_EDITOR)
 		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/lib)
 	ENDIF()
 
-    find_package(PkgConfig REQUIRED)
+	IF(PKG_CONFIG_FOUND)
+		find_package(PkgConfig REQUIRED)
+	ENDIF()
     IF(FORCE_STREFLOP_SOFTWRAPPER)
         pkg_search_module(STREFLOP streflop-soft)
     ELSE()
