--- a/source/shared_lib/CMakeLists.txt
+++ b/source/shared_lib/CMakeLists.txt
@@ -4,7 +4,10 @@
 OPTION(FORCE_EMBEDDED_LIBS "Force use of embedded libraries' code." OFF)
 
 # IMPORTANT: should come BEFORE finding packages
-find_package(PkgConfig REQUIRED)
+IF(PKG_CONFIG_FOUND)
+	find_package(PkgConfig REQUIRED)
+ENDIF()
+
 IF(FORCE_STREFLOP_SOFTWRAPPER)
     pkg_search_module(STREFLOP streflop-soft)
 ELSE()
@@ -30,6 +33,9 @@ ENDIF()
 
 IF(WANT_USE_STREFLOP)
     IF(NOT STREFLOP_FOUND)
+		IF(WIN32 AND GENERATOR_TYPE STREQUAL "Visual Studio")
+			ADD_COMPILE_DEFINITIONS(STREFLOP_SSE LIBM_COMPILING_FLT32)
+		ENDIF()
     	ADD_SUBDIRECTORY(sources/streflop)
     ELSE()
         INCLUDE_DIRECTORIES(${STREFLOP_INCLUDE_DIRS} ${STREFLOP_INCLUDE_DIRS}/streflop)
@@ -51,29 +57,31 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 	INCLUDE (CheckIncludeFiles)
 
 	IF(WIN32)
-		SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}
-					${PROJECT_SOURCE_DIR}/source/win32_deps/lib
-					${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/lib
-					${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib)
+		IF(NOT VCPKG_TARGET_TRIPLET)
+			SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}
+						${PROJECT_SOURCE_DIR}/source/win32_deps/lib
+						${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/lib
+						${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib)
 
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/include)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/openal-soft-1.12.854/include)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/openal-soft-1.12.854)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/include)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/libogg-1.2.1/include)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/lua-5.1/src)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/jpeg-8b)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/lpng141)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/zlib-1.2.5)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/curl-7.21.3/include)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/${SDL_WINDOWS_DIR_DINC}/include)
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/include)
-				       
-		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/lib)
-		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/lib)
-		link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/include)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/openal-soft-1.12.854/include)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/openal-soft-1.12.854)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/include)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/libogg-1.2.1/include)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/lua-5.1/src)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/jpeg-8b)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/lpng141)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/zlib-1.2.5)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/curl-7.21.3/include)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/${SDL_WINDOWS_DIR_DINC}/include)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/include)
+						
+			link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/lib)
+			link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/xerces-c-src_2_8_0/lib)
+			link_directories(${PROJECT_SOURCE_DIR}/source/win32_deps/wxWidgets-2.8.10/lib)
 
-		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/include)
+			INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/win32_deps/include)
+		ENDIF()
 		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/shared_lib/include/platform/posix)
 		INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/source/shared_lib/include/platform/win32)
 	ENDIF()
@@ -88,7 +96,6 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 	ENDIF()
 
 	FIND_PACKAGE(CURL REQUIRED)
-	INCLUDE(${CMAKE_SOURCE_DIR}/mk/cmake/Modules/CurlGetConfig.cmake)
 	INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
 	IF(UNIX)
 		IF(NOT OPENSSL_FOUND)
@@ -118,13 +125,13 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${X11_LIBRARIES})
 	ENDIF()
 
-        IF(WANT_USE_XercesC)
-	        FIND_PACKAGE(XercesC REQUIRED)
-	        INCLUDE_DIRECTORIES(${XERCESC_INCLUDE_DIR})
-	        IF(UNIX)
-		        SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${XERCESC_LIBRARY})
-	        ENDIF()
-        ENDIF()
+	IF(WANT_USE_XercesC)
+		FIND_PACKAGE(XercesC REQUIRED)
+		INCLUDE_DIRECTORIES(${XERCESC_INCLUDE_DIR})
+		IF(UNIX)
+			SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${XERCESC_LIBRARY})
+		ENDIF()
+	ENDIF()
 
 	FIND_PACKAGE(OpenAL REQUIRED)
 	INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR})
@@ -132,11 +139,11 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${OPENAL_LIBRARY})
 	ENDIF()
 
-        FIND_PACKAGE(LUA REQUIRED)
-        INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
-        IF(UNIX)
-	        SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${LUA_LIBRARIES} ${CMAKE_DL_LIBS})
-        ENDIF()
+	FIND_PACKAGE(LUA REQUIRED)
+	INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
+	IF(UNIX)
+		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${LUA_LIBRARIES} ${CMAKE_DL_LIBS})
+	ENDIF()
 
 	FIND_PACKAGE(JPEG REQUIRED)
 	INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
@@ -150,7 +157,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(EXTERNAL_LIBS ${EXTERNAL_LIBS} ${PNG_LIBRARY})
 	ENDIF()
 
-        OPTION(WANT_USE_FontConfig "use the library fontconfig" ON)
+    OPTION(WANT_USE_FontConfig "use the library fontconfig" ON)
 	IF(WANT_USE_FontConfig)
 	        FIND_PACKAGE(FontConfig)
 	        IF(FONTCONFIG_FOUND)
@@ -291,23 +298,25 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		FIND_PACKAGE(Miniupnpc)
 	ENDIF()
 
-	if(NOT MINIUPNP_FOUND)
+	if(NOT MINIUPNP_FOUND OR GENERATOR_TYPE STREQUAL "Visual Studio")
 		if(NOT FORCE_USE_EMBEDDED_Miniupnpc)
 			MESSAGE(STATUS "*** Using EMBEDDED miniupnpc since dev system does not have it... MINIUPNP_FOUND [${MINIUPNP_FOUND}]")
 		else()
 			MESSAGE(STATUS "*** Using EMBEDDED miniupnpc because it was forced by option")
 		endif()
 
-                if (NOT WIN32)
-                   add_definitions (-DMINIUPNPC_SET_SOCKET_TIMEOUT)
-                   add_definitions (-D_BSD_SOURCE)
+		if (NOT WIN32)
+			add_definitions (-DMINIUPNPC_SET_SOCKET_TIMEOUT)
+			add_definitions (-D_BSD_SOURCE)
 
-                   if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-                      add_definitions (-DMACOSX -D_DARWIN_C_SOURCE)
-                   else()
-                      add_definitions (-D_POSIX_C_SOURCE=200809L)
-                   endif ()
-                endif()
+			if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+				add_definitions (-DMACOSX -D_DARWIN_C_SOURCE)
+			else()
+				add_definitions (-D_POSIX_C_SOURCE=200809L)
+			endif ()
+		ELSEIF(GENERATOR_TYPE STREQUAL "Visual Studio")
+			ADD_COMPILE_DEFINITIONS(MINIUPNP_STATICLIB)
+		endif()
 
 		SET(DIRS_WITH_SRC ${DIRS_WITH_SRC} platform/miniupnpc)
 	else()
@@ -425,7 +434,6 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${PROJECT_SOURCE_DIR}/source/shared_lib/sources/platform/${SDL_VERSION_SNAME}/thread.cpp)
 		SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${PROJECT_SOURCE_DIR}/source/shared_lib/sources/platform/${SDL_VERSION_SNAME}/window.cpp)
 		SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${PROJECT_SOURCE_DIR}/source/shared_lib/sources/platform/${SDL_VERSION_SNAME}/window_gl.cpp)
-		SET(MG_SOURCE_FILES ${MG_SOURCE_FILES} ${PROJECT_SOURCE_DIR}/source/win32_deps/src/glprocs.c)
 	ENDIF()
 	
 	FOREACH(DIR IN LISTS DIRS_WITH_SRC)
@@ -496,7 +504,25 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 	ENDIF()
 
 	IF(WIN32)
-	  TARGET_LINK_LIBRARIES(${TARGET_NAME} stdc++ gcc odbc32 wsock32 winspool winmm shell32 comctl32 ctl3d32  advapi32 wsock32 opengl32 glu32 ole32 oleaut32 uuid mingw32 ddraw dsound dxguid ws2_32 iphlpapi wsock32 libogg libvorbis libvorbisfile zlib jpeg libpng xerces-c2_8_0 OpenAL32 libcurl winmm gdi32 opengl32 glu32 ${SDL_VERSION_NAME} ${SDL_VERSION_NAME}main lua5.1 stdc++ moldname mingwex msvcrt user32 kernel32)
+		IF(VCPKG_TARGET_TRIPLET)
+			TARGET_LINK_LIBRARIES(${TARGET_NAME} odbc32 wsock32 winspool winmm shell32 comctl32 advapi32 opengl32 glu32 ole32 oleaut32 uuid ddraw dsound dxguid ws2_32 iphlpapi user32 kernel32 dbghelp shlwapi)
+			find_package(Ogg CONFIG REQUIRED)
+			find_package(Vorbis CONFIG REQUIRED)
+			# find_package(ZLIB REQUIRED)
+			# find_package(JPEG REQUIRED)
+			find_package(libpng CONFIG REQUIRED)
+			find_package(XercesC CONFIG REQUIRED)
+			find_package(OpenAL CONFIG REQUIRED)
+			# find_package(CURL CONFIG REQUIRED)
+			find_package(SDL2 CONFIG REQUIRED)
+			# include(FindLua)
+			# find_package(Lua REQUIRED)
+			# find_package(GLEW REQUIRED)
+			find_package(FTGL CONFIG REQUIRED)
+			TARGET_LINK_LIBRARIES(${TARGET_NAME} Ogg::ogg Vorbis::vorbis Vorbis::vorbisenc Vorbis::vorbisfile ZLIB::ZLIB ${JPEG_LIBRARIES} png_static xerces_xerces-c XercesC::XercesC OpenAL::OpenAL CURL::libcurl gdi32 SDL2::SDL2main SDL2::SDL2-static ${LUA_LIBRARIES} ${MG_STREFLOP} GLEW::GLEW ftgl)
+		ELSE()
+			TARGET_LINK_LIBRARIES(${TARGET_NAME} stdc++ gcc odbc32 wsock32 winspool winmm shell32 comctl32 ctl3d32  advapi32 wsock32 opengl32 glu32 ole32 oleaut32 uuid mingw32 ddraw dsound dxguid ws2_32 iphlpapi wsock32 libogg libvorbis libvorbisfile zlib jpeg libpng xerces-c2_8_0 OpenAL32 libcurl winmm gdi32 opengl32 glu32 ${SDL_VERSION_NAME} ${SDL_VERSION_NAME}main lua5.1 stdc++ moldname mingwex msvcrt user32 kernel32)
+		ENDIF()
 	ENDIF()
 
 	IF(WANT_USE_STREFLOP AND NOT STREFLOP_FOUND)
