--- a/mk/windoze/glest-dev.ini
+++ b/mk/windoze/glest-dev.ini
@@ -1,3 +1,3 @@
-DataPath=$APPLICATIONPATH\..\..\data\glest_game\
+DataPath=$APPLICATIONPATH\..\..\..\megaglest-data\
 ServerListPath=$APPLICATIONPATH\..\shared\
 GlestKeysIniPath=$APPLICATIONPATH\..\shared\
