--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -92,7 +92,6 @@ IF(BUILD_MEGAGLEST)
 	ENDIF()
 
 	FIND_PACKAGE(CURL REQUIRED)
-	INCLUDE(${CMAKE_SOURCE_DIR}/mk/cmake/Modules/CurlGetConfig.cmake)
 	INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
 	IF(UNIX)
 		IF(NOT OPENSSL_FOUND)
@@ -139,7 +138,10 @@ IF(BUILD_MEGAGLEST)
 		ENDIF()
 	ENDIF()
 
-    find_package(PkgConfig REQUIRED)
+
+	IF(PKG_CONFIG_FOUND)
+    	find_package(PkgConfig REQUIRED)
+	ENDIF()
     IF(FORCE_STREFLOP_SOFTWRAPPER)
         pkg_search_module(STREFLOP streflop-soft)
     ELSE()
@@ -261,7 +263,7 @@ IF(BUILD_MEGAGLEST)
 		add_custom_target(run ALL DEPENDS mg.tmp)
 	ENDIF()
 
-	IF(WIN32)
+	IF(WIN32 AND NOT GENERATOR_TYPE STREQUAL "Visual Studio")
 		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-subsystem,console -mconsole")
 	ENDIF()
 
@@ -294,7 +296,25 @@ IF(BUILD_MEGAGLEST)
 	endif()
 
 	IF(WIN32)
-		TARGET_LINK_LIBRARIES(${TARGET_NAME} stdc++ gcc odbc32 wsock32 winspool winmm shell32 comctl32 ctl3d32  advapi32 wsock32 opengl32 glu32 ole32 oleaut32 uuid mingw32 ddraw dsound dxguid ws2_32 iphlpapi wsock32 libogg libvorbis libvorbisfile zlib jpeg libpng xerces-c2_8_0 OpenAL32 libcurl winmm gdi32 opengl32 glu32 ${SDL_VERSION_NAME} ${SDL_VERSION_NAME}main lua5.1 ${MG_STREFLOP} libmegaglest stdc++ moldname mingwex msvcrt user32 kernel32)
+		IF(VCPKG_TARGET_TRIPLET)
+			TARGET_LINK_LIBRARIES(${TARGET_NAME} odbc32 wsock32 winspool winmm shell32 comctl32 advapi32 opengl32 glu32 ole32 oleaut32 uuid ddraw dsound dxguid ws2_32 iphlpapi gdi32 user32 kernel32 dbghelp shlwapi)
+			find_package(Ogg CONFIG REQUIRED)
+			find_package(Vorbis CONFIG REQUIRED)
+			# find_package(ZLIB REQUIRED)
+			# find_package(JPEG REQUIRED)
+			find_package(libpng CONFIG REQUIRED)
+			find_package(XercesC CONFIG REQUIRED)
+			find_package(OpenAL CONFIG REQUIRED)
+			# find_package(CURL CONFIG REQUIRED)
+			find_package(SDL2 CONFIG REQUIRED)
+			# include(FindLua)
+			# find_package(Lua REQUIRED)
+			# find_package(GLEW REQUIRED)
+			find_package(FTGL CONFIG REQUIRED)
+			TARGET_LINK_LIBRARIES(${TARGET_NAME} Ogg::ogg Vorbis::vorbis Vorbis::vorbisenc Vorbis::vorbisfile ZLIB::ZLIB ${JPEG_LIBRARIES} png_static xerces_xerces-c XercesC::XercesC OpenAL::OpenAL CURL::libcurl SDL2::SDL2main SDL2::SDL2-static ${LUA_LIBRARIES} ${MG_STREFLOP} libmegaglest GLEW::GLEW ftgl)
+		ELSE()
+			TARGET_LINK_LIBRARIES(${TARGET_NAME} stdc++ gcc odbc32 wsock32 winspool winmm shell32 comctl32 ctl3d32 advapi32 wsock32 opengl32 glu32 ole32 oleaut32 uuid mingw32 ddraw dsound dxguid ws2_32 iphlpapi wsock32 libogg libvorbis libvorbisfile zlib jpeg libpng xerces-c2_8_0 OpenAL32 libcurl winmm gdi32 opengl32 glu32 ${SDL_VERSION_NAME} ${SDL_VERSION_NAME}main lua5.1 ${MG_STREFLOP} libmegaglest stdc++ moldname mingwex msvcrt user32 kernel32)
+		ENDIF()
 	ENDIF()
 
 	IF(NOT WIN32)
