Fix for linux and mac

--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -139,7 +139,7 @@ IF(BUILD_MEGAGLEST)
 	ENDIF()
 
 
-	IF(PKG_CONFIG_FOUND)
+	IF(NOT GENERATOR_TYPE STREQUAL "Visual Studio")
     	find_package(PkgConfig REQUIRED)
 	ENDIF()
     IF(FORCE_STREFLOP_SOFTWRAPPER)
