--- a/source/shared_lib/CMakeLists.txt
+++ b/source/shared_lib/CMakeLists.txt
@@ -4,7 +4,7 @@
 OPTION(FORCE_EMBEDDED_LIBS "Force use of embedded libraries' code." OFF)
 
 # IMPORTANT: should come BEFORE finding packages
-IF(NOT GENERATOR_TYPE STREQUAL "Visual Studio")
+IF(NOT VS_BUILD)
 	find_package(PkgConfig REQUIRED)
 ENDIF()
 
@@ -33,9 +33,6 @@ ENDIF()
 
 IF(WANT_USE_STREFLOP)
     IF(NOT STREFLOP_FOUND)
-		IF(WIN32 AND GENERATOR_TYPE STREQUAL "Visual Studio")
-			ADD_COMPILE_DEFINITIONS(STREFLOP_SSE LIBM_COMPILING_FLT32)
-		ENDIF()
     	ADD_SUBDIRECTORY(sources/streflop)
     ELSE()
         INCLUDE_DIRECTORIES(${STREFLOP_INCLUDE_DIRS} ${STREFLOP_INCLUDE_DIRS}/streflop)
@@ -298,7 +295,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 		FIND_PACKAGE(Miniupnpc)
 	ENDIF()
 
-	if(NOT MINIUPNP_FOUND OR GENERATOR_TYPE STREQUAL "Visual Studio")
+	if(NOT MINIUPNP_FOUND OR VS_BUILD)
 		if(NOT FORCE_USE_EMBEDDED_Miniupnpc)
 			MESSAGE(STATUS "*** Using EMBEDDED miniupnpc since dev system does not have it... MINIUPNP_FOUND [${MINIUPNP_FOUND}]")
 		else()
@@ -314,7 +311,7 @@ IF(BUILD_MEGAGLEST_MODEL_VIEWER OR BUILD_MEGAGLEST_MAP_EDITOR OR BUILD_MEGAGLEST
 			else()
 				add_definitions (-D_POSIX_C_SOURCE=200809L)
 			endif ()
-		ELSEIF(GENERATOR_TYPE STREQUAL "Visual Studio")
+		ELSEIF(VS_BUILD)
 			ADD_COMPILE_DEFINITIONS(MINIUPNP_STATICLIB)
 		endif()
 
