--- a/source/shared_lib/sources/streflop/CMakeLists.txt
+++ b/source/shared_lib/sources/streflop/CMakeLists.txt
@@ -13,6 +13,11 @@ INCLUDE_DIRECTORIES(
 
 SET(STREFLOP_SRC ${STREFLOP_GLOBBED_CPP})
 
+IF(VS_BUILD)
+	ENABLE_LANGUAGE(ASM_MASM)
+	SET(STREFLOP_SRC ${STREFLOP_SRC} FPUSettings.asm)
+ENDIF()
+
 ADD_LIBRARY(streflop STATIC EXCLUDE_FROM_ALL
 	${STREFLOP_SRC}
 )
