Get map editor and model viewer building with VS cmake builds
* Map editor and model viewer build, but only as "Release" build.
* Unwanted flags not set for msbuild, such as FPIC, -g3, -O3, -sse...
* Wanted flags set for msbuild e.g. /arch:SSE2 /fp:fast -D__SSE__
-D__SSE2__
* Allow including wx, used for vcpkg wx.
* Mapeditor is WIN32 exe for VS_BUILD. (Not sure why this is needed...)
* g3d viewer and map editor mains edited to remove unnecessary windows-
only code(, for strings).

--- a/source/shared_lib/sources/streflop/CMakeLists.txt
+++ b/source/shared_lib/sources/streflop/CMakeLists.txt
@@ -21,4 +21,7 @@ ENDIF()
 ADD_LIBRARY(streflop STATIC EXCLUDE_FROM_ALL
 	${STREFLOP_SRC}
 )
-set_target_properties(streflop PROPERTIES COMPILE_FLAGS "${PIC_FLAG}")
+
+IF(NOT VS_BUILD)
+	set_target_properties(streflop PROPERTIES COMPILE_FLAGS "${PIC_FLAG}")
+ENDIF()
