Fix map editor and g3d viewer build for linux and macos

--- a/source/glest_map_editor/CMakeLists.txt
+++ b/source/glest_map_editor/CMakeLists.txt
@@ -82,7 +82,7 @@ IF(BUILD_MEGAGLEST_MAP_EDITOR)
 		ENDIF()
 	ENDIF()
 
-	IF(PKG_CONFIG_FOUND)
+	IF(NOT VS_BUILD)
 		find_package(PkgConfig REQUIRED)
 	ENDIF()
     IF(FORCE_STREFLOP_SOFTWRAPPER)
